full content without final editing

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -100,7 +100,7 @@ ggplot(exp, aes(value, fill = Experience_type)) +
    geom_histogram(alpha = 0.4, position = 'identity',bins = 23)
 ```
 
-Let's look at the above graph(Figure \@ref(fig:dis)). For the negative solitude experiences painted in pink, we can observe that the distribution follows a normal distribution approximately where the peak is located at around 25 scores. As for the positive solitude experiences painted in blue, its distribution is more likely to be right-skewed and bimodal. We observe that the first peak is around 50 and then decreases sharply. When the score is around 65, the graph reaches the second peak. From this figure (Figure \@ref(fig: dis)), we can conclude that the negative experiences distribute more evenly than the positive experiences. And there is only a small amount of people are having delightful solitude experiences, which further enhances the need to investigate what contributes to good solitude experiences. Fortunately, the average score on the negative solitude experience is lower than the average score on the positive solitude experience. This fact implies that people are not getting severe negative experiences in solitude.
+Let's look at the above graph(Figure \@ref(fig:dis)). For the negative solitude experiences painted in pink, we can observe that the distribution follows a normal distribution approximately where the peak is located at around 25 scores. As for the positive solitude experiences painted in blue, its distribution is more likely to be right-skewed and bimodal. We observe that the first peak is around 50 and then decreases sharply. When the score is around 65, the graph reaches the second peak. From this figure (Figure \@ref(fig:dis)), we can conclude that the negative experiences distribute more evenly than the positive experiences. And there is only a small amount of people are having delightful solitude experiences, which further enhances the need to investigate what contributes to good solitude experiences. Fortunately, the average score on the negative solitude experience is lower than the average score on the positive solitude experience. This fact implies that people are not getting severe negative experiences in solitude.
 
 ### Solitude experiences and the social quality
 
@@ -316,7 +316,23 @@ Now, let's discuss the estimations for each preditor. The estimation for the age
 To conclude these two models, we have learned that only four variables significantly correlate with the solitude experiences. Age is associated with both types of solitude experiences, and a greater age will lead to better solitude, though the impact of age on solitude experience is tiny. Social quality is correlated with both types of solitude experiences as well, as a better social quality will to a great extent, make the solitude experience better. Although self-efficacy is only shown to be related to the positive solitude affect, having a higher self-efficacy level can help improve the solitude experience a lot. As for the anxiety level, it is positively related to the negative solitude affect. Thus we have learned that we should try not to be anxious too much to have better solitude experiences.
 
 
-# Discussion 
+# Discussion
+
+## Conclusion 
+
+During the covid pandemic, especially in my home country China, we spend a lot of time doting quarantine to prevent the virus from spreading. Many people get too depressed when they are forced to be isolated. Thus, I need to investigate what can help people have a better solitude experience, and I have done so. The final result of my paper implies that the social relationship quality strongly relates to positive and negative solitude experiences. By increasing their social relationship quality, participants can quickly reduce their negative solitude feeling in their daily life. Thus, for people trying to have an enjoyable solitude experience, it might be better for them to improve their social quality. However, I know it is tough to improve one's social quality in a short time. Our result shows a more straightforward way for people to have better solitude experiences: trying not to be anxious. As anxiety level has a significantly positive relationship to the negative solitude experiences, trying to be less anxious can directly reduce the negative solitude experience and help us feel better.
+
+
+## Limitations
+Our dataset has a few limitations that may affect our final result. First of all, the sample size of our dataset is too small, which makes our dataset not as representative as we expect. Second, the original experiments have more female participants than male participants and more dwelling adults than students. This setting may result in potential bias in our conclusions; for example, we conclude that females are more likely to have a high level of anxiety and are easily affected by the anxiety. However, this conclusion may occur simply due to the more significant number of female participants. Third, we notice that the age gap between the students and adult are pretty high. As a result, we don't gain any information for that younger adult, which may significantly affect our final results. Lastly, I want to mention the potential bias when doing the data cleaning. I choose only the arousal positive and negative affect and use them to represent positive and negative solitude experiences, which is not considered. \
+Then, I want to discuss the potential limitation of fitting, choosing, and interpreting the models. For my paper, I use linear regression as the primary method; however, as I mentioned in the previous section, linear regression requires multiple assumptions to be accurate. I did not check strictly on those assumptions; thus, the final result we get will be insignificant if the dataset fails to meet any assumptions. Also, as we interpret the model, we regard our development as significant only by saying the p-values are less than the significance level, which may bring up the potential risk of p-hacking.
+
+
+## Next step
+For our future study, I think we first need a greater sample size for our research to become more representative. Secondly, we must balance the number of female and male participants and ensure that we have similar data on different age groups. Third, I think it will be better to collect additional information for our dataset; for example, I think we can generate information about the participant's educational background, job position, and family background…Forth, we need more than the simple linear regression since the variables in our dataset are not entirely independent of each other. Then using the linear model to get the final result will not be that accurate. More complex models are needed. Lastly,
+I want to mention the relationship between social quality and the total network size. I have studied this for a bit in this paper, and I feel that this topic is worth digging into since it has been a very confusing problem for a long time. 
+
+
 
 \newpage
 
