--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -124,3 +124,13 @@ month={Dec}}
    url={https://www.apa.org/pi/aids/resources/education/self-efficacy}, 
    journal={American Psychological Association}, 
    publisher={American Psychological Association}} 
+   
+@Book{car,
+    title = {An {R} Companion to Applied Regression},
+    edition = {Third},
+    author = {John Fox and Sanford Weisberg},
+    year = {2019},
+    publisher = {Sage},
+    address = {Thousand Oaks {CA}},
+    url = {https://socialsciences.mcmaster.ca/jfox/Books/Companion/},
+  }
