--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -270,7 +270,7 @@ Note: In our paper, the significance level I use is $alpha$=0.05
 ## Model fitting and selection
 
 I fit two models using all of the selected variables, one for the positive solitude affect and the other one for the negative solitude affect. The variables are age, gender, the rate of overall well being, social network size, social relationship quality, social self-efficacy, the self-reflection, solitude time, and anxiety level.\
-From the below table(Table \@ref(tab:vif), we can see that all of the VIF values are relatively small. So, we decided to keep all those variables in the full models. Then, I use the backward selection to help me select the best model. Our full model for positive solitude affect contains nine variables: age, gender, the rate of overall well-being, social network size, social relationship quality, social self-efficacy, self-reflection, solitude time, and anxiety level. The backward selection model removes six variables from my full model. Thus, the backward selection model for the positive solitude experiences has only three variables; age, social quality, and self-efficacy. And those variables are concluded as having the most correlation with the positive solitude experiences. Our full model for the negative solitude affect contains nine variables as well. The backward selection model also removes six variables from my full model. Thus, the backward selection model for the negative solitude affect has three variables; age, social quality, and anxiety level. And those variables are concluded as having the most correlation with the negative solitude affect.\
+From the below table(Table \@ref(tab:vif), we can see that all of the VIF values are relatively small(Note: the vif values for both models are the same because the predictors in both models are the same). So, we decided to keep all those variables in the full models. Then, I use the backward selection to help me select the best model. Our full model for positive solitude affect contains nine variables: age, gender, the rate of overall well-being, social network size, social relationship quality, social self-efficacy, self-reflection, solitude time, and anxiety level. The backward selection model removes six variables from my full model. Thus, the backward selection model for the positive solitude experiences has only three variables; age, social quality, and self-efficacy. And those variables are concluded as having the most correlation with the positive solitude experiences. Our full model for the negative solitude affect contains nine variables as well. The backward selection model also removes six variables from my full model. Thus, the backward selection model for the negative solitude affect has three variables; age, social quality, and anxiety level. And those variables are concluded as having the most correlation with the negative solitude affect.\
 
 ```{r vif}
 #create dataframe and generate table
@@ -324,7 +324,7 @@ knitr::kable(mod1_table,caption="The estimations and the p values for the positi
 We first look at $\hat{\beta}_0$. This value is the intercept of our linear regression models. It means when the other variable equals 0. Accordingly, our score on positive solitude is 0.74659, which is almost 0. This result is meaningless in an actual situation since the score for the positive solitude can hardly be 0. Also, we found out that the p-value for the intercept is more significant than the significance level of 0.05, which further proves my statement that this intercept estimate is meaningless. Then, for all of the predictors, we can find out that all p values are less than the significance level of 0.05. Therefore, I conclude that we have strong evidence to support our null hypothesis; thus, the positive solitude affect is highly correlated with age, social quality, and self-efficacy.\
 Now, let's discuss the estimations for each predictor. The estimate for the age is 0.24844, which means that one year increase in age while holding other variables constant will lead to a 0.24844 increase in the score for the positive solitude experience. This result shows that age has a positive relationship with the positive solitude affect, as we expect, but the impact on the positive solitude affect is relatively tiny. As for the social quality, the estimation for the social_quality is 5.96085, which means that one score increase in the social_qualoity while holding other variables constant will lead to a 5.96085 increase in the score for the positive solitude experience. This result shows that the social_quality do a positive relationship with the positive solitude affect, as we expect, and the impact on the positive solitude affect is significant. Lastly, for the self-efficacy, since we have not dived into this concept earlier in this paper, I will first introduce what self-efficacy refers to. Self-efficacy refers to an individual's belief in their capacity to execute behaviors necessary to produce specific performance attainments[@american]. The estimation for the social_quality is 5.78392, which means that one score increase in the self_efficacy while holding other variables constant will lead to a 5.78392 increase in the score for the positive solitude experience. This result shows that the self_efficacy has a positive relationship with the positive solitude affect and significantly impacts the positive solitude affect.
 
-Let's also look at the model for the negative solitude affect. The following table includes the estimated results for this model(Table \@ref(tab:negt).
+Let's also look at the model for the negative solitude affect. The following table includes the estimated results for this model(Table \@ref(tab:negt)).
 
 ```{r negt}
 #create dataframe and generate table
@@ -365,7 +365,8 @@ I want to mention the relationship between social quality and the total network 
 
 # Appendix {-}
 
-## Data Sheet
+**Data Sheet**:
+\
 
 **Motivation**
 
